# Vex

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  ruff.toml  test_e2e.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  publish-sdk.yml
demo/: .env.example  agent.py  requirements.txt  test_correction_layers.py
docs/: DEPLOYMENT.md
docs/plans/: 2026-02-10-agentguard-architecture-design.md  2026-02-11-phase2-core-reliability.md  2026-02-11-phase3-correction-cascade.md  2026-02-12-api-key-management.md  2026-02-12-dashboard-homepage-design.md  2026-02-12-phase3-implementation.md  2026-02-13-addworkspace-implementation.md  2026-02-13-addworkspace-page-design.md  2026-02-13-onboarding-and-marketing-removal-design.md  2026-02-13-onboarding-implementation.md  2026-02-15-production-hardening-design.md  2026-02-15-production-hardening.md  2026-02-15-sessions-page-implementation.md  2026-02-15-typescript-sdk-design.md  2026-02-15-typescript-sdk-implementation.md  2026-02-19-ai-discoverability-design.md  2026-02-19-ai-discoverability-implementation.md  2026-02-19-content-seo-engine-design.md  2026-02-19-content-seo-engine-implementation.md  2026-02-19-monetization-design.md  2026-02-19-monetization-gap-closure-design.md  2026-02-19-monetization-implementation.md  2026-02-19-session-check-breakdown-design.md  2026-02-20-cost-latency-anomaly-detection-design.md  2026-02-20-cost-latency-anomaly-detection.md  2026-02-20-live-agent-demo-design.md  2026-02-20-platform-gaps-roadmap-design.md  2026-02-20-pricing-redesign-design.md  2026-02-20-time-range-selector-design.md  2026-02-20-time-range-selector.md  2026-02-20-tool-loop-detection.md  2026-02-20-tool-usage-analytics-redesign.md  2026-02-22-licensing-design.md  2026-02-22-licensing.md  2026-02-28-due-diligence-readiness-design.md  2026-02-28-due-diligence-readiness.md  2026-03-08-docker-self-hosting-plan.md
infra/docker/: .env.example  docker-compose.yml
scripts/: generate-og-image.mjs  generate-readme-banner.mjs  test_comprehensive.py  test_live_smoke.py  test_live_verification.py
sdk/python/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sdk/python/agentguard/: __init__.py  config.py  exceptions.py  guard.py  models.py  transport.py
sdk/python/tests/: test_config.py  test_guard.py  test_models.py  test_transport.py
sdk/python/vex/: __init__.py  config.py  exceptions.py  guard.py  models.py  transport.py
services/alert-service/: Dockerfile  README.md  pyproject.toml
services/alert-service/app/: __init__.py  db.py  dedup.py  main.py  slack.py  webhook.py  worker.py
services/alert-service/tests/: test_dedup.py  test_slack.py  test_webhook.py  test_worker.py
services/async-worker/: Dockerfile  README.md  pyproject.toml
services/async-worker/app/: __init__.py  main.py  worker.py
services/async-worker/tests/: test_worker.py
services/dashboard-api/: Dockerfile  README.md  pyproject.toml
services/dashboard-api/app/: main.py  websocket.py
services/dashboard-api/tests/: conftest.py  test_websocket.py
services/ingestion-api/: Dockerfile  README.md  pyproject.toml
services/ingestion-api/app/: auth.py  main.py  redis_client.py  routes.py
services/ingestion-api/tests/: conftest.py  test_routes.py
services/migrations/: README.md  alembic.ini  pyproject.toml
services/migrations/alembic/: env.py
services/migrations/alembic/versions/: 001_initial_schema.py  002_fix_aggregate_refresh.py  003_add_account_slug.py  004_add_session_columns.py  005_phase2_verification_columns.py  006_add_correction_column.py  007_api_key_gin_index.py  008_plan_retention_enforcement.py  011_add_guardrails_table.py
services/shared/: README.md  conftest.py  models.py  pyproject.toml
services/shared/shared/: auth.py  models.py  redis_config.py
services/shared/tests/: test_auth.py  test_models.py
services/storage-worker/: Dockerfile  README.md  pyproject.toml
services/storage-worker/app/: db.py  main.py  s3_client.py  worker.py
services/storage-worker/tests/: conftest.py  test_worker.py
services/sync-gateway/: Dockerfile  README.md  pyproject.toml
services/sync-gateway/app/: __init__.py  auth.py  guardrails_loader.py  main.py  redis_client.py  routes.py
services/sync-gateway/tests/: test_routes.py
services/verification-engine/: README.md  pyproject.toml
services/verification-engine/engine/: __init__.py  coherence.py  confidence.py  conversation_utils.py  correction.py  drift.py  guardrails.py  hallucination.py  llm_client.py  models.py  pipeline.py  schema_validator.py  tool_loop.py
services/verification-engine/tests/: test_coherence.py  test_confidence.py  test_correction.py  test_correction_models.py  test_drift.py  test_guardrails.py  test_hallucination.py  test_pipeline.py  test_schema_validator.py  test_tool_loop.py
tests/integration/: conftest.py  test_api_key_lifecycle.py  test_async_path.py  test_correction_path.py  test_sync_path.py
