[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx-sdk"
version = "0.2.0"
description = "The reliability layer for AI agents in production"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Oppla.ai", email = "eng@oppla.ai"},
]
keywords = ["ai", "agents", "reliability", "observability", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://oppla.ai/agentguard"
Repository = "https://github.com/Agent-X-AI/Python-SDK"
Documentation = "https://docs.oppla.ai/agentguard"
"Issue Tracker" = "https://github.com/Agent-X-AI/Python-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
